--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "graphiql-local",
-  "version": "1.0.0",
-  "description": "",
+  "name": "serverless-plugin-graphiql",
+  "version": "0.1.0",
+  "description": "Runs a local http server for graphiql and your graphql handler",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tap --coverage-report=text-summary --timeout=120 --no-bail test/unit",
     "start": "node server.js",
     "debug": "node --inspect --debug-brk server.js"
   },
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-event-mocks": "github:serverless/aws-event-mocks",
-    "graphql": "^0.8.2"
+    "aws-event-mocks": "github:serverless/aws-event-mocks"
   },
   "devDependencies": {
-    "graphql": "^0.8.2"
+    "serverless": "^1.5.0",
+    "graphql": "^0.8.2",
+    "tap": "^6.3.2"
   },
   "optionalDependencies": {
     "babel-eslint": "^6.1.2",
