--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "serverless-plugin-graphiql",
   "version": "0.1.0",
   "description": "Runs a local http server for graphiql and your graphql handler",
-  "main": "server.js",
+  "main": "plugin.js",
   "scripts": {
     "test": "tap --cov test/unit",
     "start": "node server.js",
