--- a/package.json
+++ b/package.json
@@ -8,7 +8,18 @@
     "start": "node server.js",
     "debug": "node --inspect --debug-brk server.js"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bencooling/serverless-plugin-graphiql.git"
+  },
+  "keywords": [
+    "graphql",
+    "graphiql",
+    "aws",
+    "serverless",
+    "lambda",
+    "faas"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
